<resources>
    <string name="app_name">OnePass</string>
    <string name="logo">logo</string>
    <string name="splash_description">The only password manager you’ll ever need.</string>

    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>

    <string name="title_1">GENERATE SECURE PASSWORDS.</string>
    <string name="description_1">Stop using unsecure passwords for your online accounts, level up with OnePass. Get the most secure and difficult-to-crack passwords.</string>
    <string name="title_2">ALL YOUR PASSWORDS ARE HERE.</string>
    <string name="description_2">Store and manage all of your passwords from one place. Don’t remember hundreds of passwords, just remember one.</string>
    <string name="title_3">DON’T TYPE, AUTOFILL YOUR CREDENTIALS.</string>
    <string name="description_3">Don’t compromise your passwords by typing them in public, let OnePass autofill those and keep your credentials secure.</string>

    <string-array name="tab_titles">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="home">Home</string>
    <string name="password">Password</string>
    <string name="setting">Setting</string>

    <string name="passwords_stored">Passwords Stored</string>
    <string name="passwords_stored_number">0</string>

    <string name="search_websites_or_apps">Search Websites/Apps…</string>

    <string name="f">F</string>
    <string name="facebook">Facebook</string>
    <string name="copy">copy</string>
    <string name="copied">Copied!</string>

    <string name="searchIllustration">Search illustration</string>
    <string name="no_results">No results</string>
    <string name="no_found">We couldn\'t find anything. Try searching for something else.</string>
    <string name="no_passwords">No passwords</string>
    <string name="no_passwords_stored">No passwords stored yet. Add your first password to get started!</string>

    <string name="add_new">Add new</string>
    <string name="name">name</string>
    <string name="website_app_name">Website/App Name</string>
    <string name="url">url</string>
    <string name="website_app_link">Website/App Link</string>
    <string name="username">Email / Username</string>

    <string name="generate_new">Generate new</string>
    <string name="add_password">Add password</string>

    <string name="date_icon">date</string>
    <string name="date">25 May 2022</string>
    <string name="link_icon">icon</string>
    <string name="link">www.facebook.com</string>
    <string name="user_icon">user</string>
    <string name="user">james.smith@mail.gg</string>
    <string name="lock_icon">lock</string>
    <string name="password_toggle">password toggle</string>

    <string name="delete">Delete</string>
    <string name="update">update</string>
    <string name="save_changes">Save changes</string>

    <string name="password_length">Password length</string>
    <string name="include_symbols">Include symbols</string>
    <string name="include_digits">Include digits</string>
    <string name="letter_types">Letter types</string>
    <string name="randomize">Randomize</string>

    <string-array name="length">
        <item>6</item>
        <item>8</item>
        <item>12</item>
        <item>16</item>
        <item>20</item>
        <item>24</item>
        <item>32</item>
    </string-array>

    <string-array name="yes_no">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="letter_types">
        <item>Mix</item>
        <item>Upper case</item>
        <item>Lower case</item>
    </string-array>

    <string name="security">Security</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="biometric_screen_lock">Biometric &amp; screen lock</string>
    <string name="app_unlock">OnePass is locked</string>
    <string name="authentication_message">Authentication is required to access the OnePass app</string>
    <string name="unlock_now">Unlock now</string>
    <string name="theme">Theme</string>
    <string name="light_mode">Light mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="device_settings">Device settings</string>
    <string name="app_version">- Version 1.0 -</string>
    <string name="theme_mode">Choose your preferred theme for OnePass</string>
</resources>