<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.main.home.DetailsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/screenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/facebook"
        android:textAllCaps="true"
        android:textColor="@color/span_color"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/dateIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/date_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screenTitle"
        app:srcCompat="@drawable/ic_date" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/date"
        android:textColor="@color/span_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/dateIcon"
        app:layout_constraintTop_toBottomOf="@+id/dateIcon" />

    <ImageView
        android:id="@+id/linkIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/link_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateText"
        app:srcCompat="@drawable/ic_link" />

    <TextView
        android:id="@+id/linkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/link"
        android:textColor="@color/span_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/linkIcon"
        app:layout_constraintTop_toBottomOf="@+id/linkIcon" />

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/user_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkText"
        app:srcCompat="@drawable/ic_user" />

    <TextView
        android:id="@+id/userText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/user"
        android:textColor="@color/span_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/userIcon"
        app:layout_constraintTop_toBottomOf="@+id/userIcon" />

    <ImageView
        android:id="@+id/lockIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/lock_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userText"
        app:srcCompat="@drawable/ic_lock" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        android:textColor="@color/span_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/lockIcon"
        app:layout_constraintTop_toBottomOf="@+id/lockIcon" />

    <ImageView
        android:id="@+id/password_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/password_toggle"
        android:src="@drawable/ic_eye_close"
        app:layout_constraintEnd_toStartOf="@+id/copyIcon"
        app:layout_constraintTop_toBottomOf="@+id/lockIcon" />

    <ImageView
        android:id="@+id/copyIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/copy"
        android:src="@drawable/ic_copy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lockIcon" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="8sp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/border_button_background"
            android:text="@string/delete"
            android:textColor="@color/default_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginEnd="16sp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/fill_button_background"
            android:text="@string/update"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>