<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    android:background="@drawable/item_background"
    android:elevation="5dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/passwordFont"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:background="@drawable/password_background"
        android:gravity="center"
        android:text="@string/f"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/passwordName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/passwordFont"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/facebook"
        android:textColor="@color/span_color"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/copyIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/copy"
        android:src="@drawable/ic_copy" />
</RelativeLayout>